kube/content-processor-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: content-processor
  template:
    metadata:
      labels:
        app: content-processor
    spec:
      containers:
        - name: content-processor
          image: dotochka/content-processor:v1.0
          command:
            - "sh"
            - "-c"
            - |
              echo "Database URL: $SPRING_DATASOURCE_URL"
              echo "Kafka servers: $SPRING_KAFKA_BOOTSTRAP_SERVERS"
              java -jar /app.jar
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 500m
          ports:
            - containerPort: 8082
              protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: content-processor
spec:
  selector:
    app: content-processor
  ports:
    - port: 80
      targetPort: 8082
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-service-content-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-service-content-processor
  template:
    metadata:
      labels:
        app: postgres-service-content-processor
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          emptyDir:
            {}
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service-content-processor
spec:
  selector:
    app: postgres-service-content-processor
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
