kube/kafka-zookeeper.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:7.3.0
          ports:
            - containerPort: 2181
          resources:
            requests:
              memory: 512Mi
              cpu: 200m
            limits:
              memory: 1Gi
              cpu: 400m
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-service
spec:
  ports:
    - port: 2181
      targetPort: 2181
  selector:
    app: zookeeper
  clusterIP: None
